# pycek_public

./: .gitattributes  .space  Dockerfile  LICENSE  MIGRATION.md  README.md  pyproject.toml  test_comparison.py
.github/workflows/: container.yml  space.yml
deployment/: Dockerfile  README.md  build.sh  requirements.txt
marimo/: app.py  bomb_calorimetry.py  calendar.html  crystal_violet.py  equilibrium.py  equilibrium_basic.py  index.html  index.py  raman.py  statistics_lab.py  surface_adsorption.py
marimo/docs/: LabReportTemplate.docx
src/pycek_public/: __init__.py  bomb_calorimetry.py  cek_labs.py  crystal_violet.py  generate_random_filenames.py  logger.py  plotting.py  raman_fitter.py  statistics_lab.py  surface_adsorption.py
src/pycek_public.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
svelte-app/: MANUAL_TESTING_CHECKLIST.md  QUICK_START.md  TEST_REPORT.md  package-lock.json  package.json  test-labs.js
svelte-app/src/routes/: +layout.js  +page.svelte
svelte-app/src/routes/bc/: +page.svelte
svelte-app/src/routes/calendar/: +page.svelte
svelte-app/src/routes/cv/: +page.svelte
svelte-app/src/routes/eq/: +page.svelte
svelte-app/src/routes/stats/: +page.svelte
svelte-app/src/routes/surface/: +page.svelte
svelte-app/static/docs/: LabReportTemplate.docx
